# Tithing-Api

./: .gitignore  README.md  dockerfile  pyproject.toml
app/: main.py
