[project]
name = "tithing-api"
version = "0.1.0"
description = "Upload a Wells Fargo CSV and compute 10% tithing for matching deposits."
readme = "README.md"
authors = [{ name = "Carlos Lespin", email = "carlos.lespin.silva@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv]

[tool.uv.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
